tests/NormalTests/paczka1/fuzzy1/71206472.err
Error in line 1: S9n9pS3vsdG S156 64,4
Error in line 7: HJefziE S456 5,9
Error in line 8: HJefziE A254 99,1
Error in line 5: sXEpY S156 44,9
Error in line 26: S9n9pS3vsdG A2H4 339,0
Error in line 22: sXEpY A254 38,5
Error in line 20: HJefziE S572 248,5
Error in line 36: S456 S572 94,9
